[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "ASYNC"]
ignore = [
    "E501",     # line too long
    "UP042",    # StrEnum style preference
    "ASYNC109", # timeout parameter naming
    "ASYNC240", # pathlib in async (not using trio/anyio)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"